assets/css/style.css
/*Colours*/
:root {
    --bool-bg-dark: #009688;
    --bool-bg-light: #DADBD4;
    --bool-lightup: #EAEAEA;
    --bool-bg-windowup: #8EDAFC;
    --bool-bg-light: #FFFFFF;
    --bool-bg-light: #D5F9BA;
}




/*Reset CSS*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}




/*Debug*/

.debug main {
    background-color: blueviolet;
    height: 100vh;
    width: 100vw;
}

.debug .col-4 {
    background-color: aqua;
}

.debug .col-8 {
    background-color: greenyellow;
}

.debug #my-user {
    height: calc((100%/8));
}

.debug #my-not {
    height: calc((100%/8));
}

.debug #search-bar {
    height: calc((100%/16));
}

.debug .card-user {
    height: calc((100%/8));
}

.debug #up-right {
    height: calc((100%/8));
    background-color: chocolate;
}

.debug #bottom-right {
    height: 7%;
    background-color: chocolate;
}

.debug .square {
    background-color: darkorchid;
}

/*Utilities*/
.d-flex {
    display: flex;
}

.col-4 {
    width: calc((100%/12)*4);
}

.col-7 {
    width: calc((100%/12)*7);
}

.col-8 {
    width: calc((100%/12)*8);
}











#site-main {
    padding-top: 2vh;
}

.chat-container {
    width: 80%;
    background-color: brown;
    height: 96vh;
    margin: auto;
}

.col-left {
    max-height: 100%;
    overflow-y: scroll;
}

#my-user {
    justify-content: space-between;
    align-items: center;
}

#my-not {
    align-items: center;
}

#up-right {
    width: 100%;
    justify-content: space-between;
}

.col-right {
    flex-direction: column;
}

#middle-right {
    margin: auto;
    height: 80%;
    flex-direction: column;
    gap: 3%;
    padding: 5%;
}

#bottom-right {
    justify-content: space-between;
    align-items: center;
}

#r-square {
    align-self: flex-end;
}




/*Media Query*/
@media screen and (max-width:991px) {
    .chat-container {
        width: 100%;
        height: 100vh;
        margin: auto;
    }

    #site-main {
        padding: 0;
    }

    .col-left{
        display: flex;
        flex-direction: column;
    }

    .col-md-1 {
        width: calc((100%/12)*1);
    }

    .col-md-11 {
        width: calc((100%/12)*11);
    }

    .card-bye {
        display: none;
    }
}

@media screen and (max-width:540px) {
    .not-show {
        display: none;
    }

    #bottom-right {
        justify-content: center;

    .col-12-sm {
        width: 100%;
    }

    .card-bye-sm {
        display: none;
    }
}

